# Inference-in-Higher-order-Graphical-Model

./: QR_code_denoising.ipynb  README.md
Decoding/: README.md
Decoding/Code/: Generator.cpp  Generator.h  Optimizer.cpp  Optimizer.h  README.md  readme.md
Decoding/length_120/: check_matrix_3_3_40.txt  check_matrix_4_4_30.txt  check_matrix_5_5_24.txt  check_matrix_6_6_20.txt
Decoding/length_60/: check_matrix_3_3_20.txt  check_matrix_4_4_15.txt  check_matrix_5_5_12.txt  check_matrix_6_6_10.txt
Decoding/src/: CMakeLists.txt  Generator.cpp  Generator.h  Optimizer.cpp  main.cpp
Denoising/: CRAMA_denoising.ipynb  QR_code_denoising.ipynb  README.md  qr_200_100.txt
Denoising/CRAMA/: CEN_100.txt  CEN_15.txt  CROSS_100.txt  CROSS_15.txt  TL_100.txt  TL_15.txt
Denoising/QR_train_set/: train_qr_matrix1.txt  train_qr_matrix10.txt  train_qr_matrix2.txt  train_qr_matrix3.txt  train_qr_matrix4.txt  train_qr_matrix5.txt  train_qr_matrix6.txt  train_qr_matrix7.txt  train_qr_matrix8.txt  train_qr_matrix9.txt
